<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ima4"
    tools:context=".login.menu_inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textColor="@color/titulos"
                android:textSize="30dp"
                android:textStyle="bold|italic"
                android:text="@string/bienvenida" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tema_blanco_trans">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="33"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tienes_cuenta"
                                android:textSize="15dp"
                                android:paddingBottom="20dp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_ini_sesion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blanco"
                            android:drawableLeft="@drawable/ini_sesion"
                            android:drawablePadding="12dp"
                            android:paddingRight="20dp"
                            android:paddingLeft="20dp"
                            android:background="@drawable/tema_boton"
                            android:text="@string/ini_sesion" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView19"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/o_regis"
                                android:textSize="15dp"
                                android:paddingBottom="20dp"/>
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_registrar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blanco"
                            android:drawableLeft="@drawable/regist_uss"
                            android:drawablePadding="12dp"
                            android:paddingRight="20dp"
                            android:paddingLeft="20dp"
                            android:background="@drawable/tema_boton"
                            android:text="@string/regis" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView20"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/o_google"
                                android:textSize="15dp"
                                android:paddingBottom="20dp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blanco"
                            android:background="@drawable/tema_boton"
                            android:text="@string/google" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
</RelativeLayout>