<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ima4"
    tools:context=".login.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:paddingBottom="20dp"
            android:paddingTop="50dp"
            android:layout_weight="45"
            app:srcCompat="@drawable/logo_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tema_blanco_trans"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10"/>

                    <EditText
                        android:id="@+id/txt_lg_user"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="33"
                        android:background="@drawable/caja_texto_style2"
                        android:drawableLeft="@drawable/user_lg"
                        android:drawablePadding="12dp"
                        android:ems="10"
                        android:hint="@string/usuario"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/txt_lg_pass"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="33"
                        android:background="@drawable/caja_texto_style2"
                        android:drawableLeft="@drawable/pass_lg"
                        android:drawablePadding="12dp"

                        android:ems="10"
                        android:hint="@string/pass"
                        android:inputType="textPassword" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="34"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:text="mantener la sesion" />

                        <Button
                            android:id="@+id/btn_ingresar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/tema_boton"
                            android:text="@string/ingresar"
                            android:drawableLeft="@drawable/ini_sesion"
                            android:drawablePadding="12dp"
                            android:paddingRight="20dp"
                            android:paddingLeft="20dp"

                            android:textColor="@color/blanco" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>
</RelativeLayout>